# msc-swe-thesis

./: .gitignore  LICENSE  README.md
ReconCalc/doc/: recon-calc-manual.ps  reconnaissance.ps
ReconCalc/example/: house.ctl  output.txt  testcase1reduced.txt  testcase2reduced.txt  testcase3reduced.txt  testcase4reduced.txt  testcase5reduced.txt
ReconCalcPython/: .gitignore  README.md  app.py  cli.py  example_report.html  example_report.md  pyproject.toml
ReconCalcPython/core/: __init__.py  parser.py  recon_calc.py  reporter.py
literature-review/: Relevant(ACM).csv  Relevant(IEEE).csv  Relevant(Science_direct).csv  lit_review_paper_clean_up.ipynb
tool/: README.md  __main__.py  pyproject.toml
tool/arch_recovery/: __main__.py  config.py  paths.py
tool/arch_recovery/cli/: cli.py  main.py  options.py
tool/arch_recovery/instrumentation/: instrumentor.py
tool/arch_recovery/lsi_mapping/: mapper.py
tool/arch_recovery/pipleline/: analyzer.py  collector.py  diagram_generator.py  diagram_renderer.py  instrumentor.py
tool/arch_recovery/reconnaissance/: analyzer.py
tool/arch_recovery/reflexion/: engine.py
tool/arch_recovery/reporting/: mermaid_generator.py
tool/arch_recovery/static_extraction/: extractor.py
tool/tests/mock_project/: app.py  architecture_recovery.md  detected_mapping.yaml  test_app.py  tmpph4b0ao7.trace
