[project]
name = "recon-calc"
version = "0.1.0"
description = "A Python translation of the ReconCalc software reconnaissance tool."
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.35",
    "pandas>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
